--- a/psk_fitness/psk_fitness/Components/Topics/CreateTopic.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/CreateTopic.razor
@@ -1,5 +1,4 @@
-﻿@rendermode InteractiveServer
-<!-- Button trigger modal -->
+﻿<!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTopicModal">
     New topic
 </button>
@@ -7,7 +6,7 @@
 <!-- Modal -->
 <div class="modal fade" id="newTopicModal" tabindex="-1" aria-labelledby="newTopicModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content" style=@($"background-color: {CreateTopicModel.Color}")>
+        <div class="modal-content" style=@($"background-color: {CreateTopicModel.CssColor?.ToString()}")>
             <div class="modal-header">
                 <h5 class="modal-title" id="newTopicModalLabel">New topic</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -25,11 +24,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="topicColor" class="form-label">Color</label>
-                        <InputRadioGroup @bind-Value=CreateTopicModel!.Color class="d-flex flex-wrap gap-2">
-                            @foreach (string color in _availableTopicColors)
+                        <InputRadioGroup @bind-Value=CreateTopicModel!.CssColor class="d-flex flex-wrap gap-2">
+                            @foreach (CssColor color in _availableCssTopicColors)
                             {
                                 <InputRadio Value=color class="color-circle"
-                                    style=@($"background-color: {color}")>
+                                    style=@($"background-color: {color.ToString()}")>
                                 </InputRadio>
                             }
                         </InputRadioGroup>
@@ -56,42 +55,42 @@
         appearance: none;
         -webkit-appearance: none;
         -moz-appearance: none;
-}
+    }
+
+    .valid.modified:not([type="checkbox"]) {
+        outline: none;
+    }
 
     input[type="radio"]:checked {
         border: 5px solid black;
     }
 </style>
 
+
 @code {
 
     public class CreateTopicData {
         public string? Title {get; set;}
         public string? Description {get; set;}
-        public string? Color {get; set;}
+        public CssColor? CssColor {get; set;}
     }
-
-    private CreateTopicData _createTopicModel;
 
     [SupplyParameterFromForm]
-    public CreateTopicData CreateTopicModel {
-        get { return _createTopicModel; }
-        set {
-            _createTopicModel = value;
-            Console.WriteLine("color from setter: "+_createTopicModel.Color);
-        }
+    public CreateTopicData CreateTopicModel {get; set;}
+
+    protected override void OnInitialized(){
+        CreateTopicModel ??= new();
     }
 
-        protected override void OnInitialized()
-    {
-        _createTopicModel ??= new();
-    }
-
-    private List<string> _availableTopicColors { get; set; }
-    = new() {"red", "green", "blue"};
+    private List<CssColor> _availableCssTopicColors { get; set; }
+    = new() {
+        new CssColor(CssColorMode.RGBA, (255, 150, 150).ToTuple()),
+        new CssColor(CssColorMode.RGBA, (150, 255, 150).ToTuple()),
+        new CssColor(CssColorMode.RGBA, (150, 150, 255).ToTuple()),    
+    };
 
     private void OnSubmit() {
-        _availableTopicColors.Add("pink");
+        _availableCssTopicColors.Add(new CssColor(CssColorMode.RGBA, (255, 0, 150).ToTuple()));
         return;
     }
 
