--- a/psk_fitness/psk_fitness/Components/Topics/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/Topics.razor
@@ -25,9 +25,9 @@
         @foreach (TopicDisplayData topic in _topicsToDisplay)
         {
             <div class="col-md-4">
-                <div class="card mb-4" style=@($"background-color: {topic.CssColor}; min-height: 10rem")>
+                <div class="card mb-4 topic-card-size" style=@($"background-color: {topic.CssColor}")>
                     <div class="card-body">
-                        <img src=@topic.ImageBase64 class="card-img-top" alt="Topic image">
+                        <img src=@topic.ImageBase64 class="topic-img mx-auto d-block" alt="Topic image">
                     </div>
                     <div class="card-footer">
                         <h5 class="card-title text-center">@topic.Title</h5>
@@ -37,6 +37,18 @@
         }
     </div>
 </div>
+
+<style>
+    .topic-card-size {
+        min-height: 10rem;
+    }
+
+    .topic-img {
+        width: 200px;
+        height: 150px;
+        object-fit: fill;
+    }
+</style>
 
 
 @code {
@@ -48,6 +60,5 @@
 
     public void AddTopicToDisplay(TopicDisplayData topicToDisplay) {
         _topicsToDisplay.Add(topicToDisplay);
-        Console.WriteLine(topicToDisplay.ImageBase64);
     }
 }
