--- a/psk_fitness/psk_fitness/Components/Topics/Topics.razor
+++ b/psk_fitness/psk_fitness/Components/Topics/Topics.razor
@@ -25,12 +25,9 @@
         @foreach (TopicDisplayData topic in _topicsToDisplay)
         {
             <div class="col-md-4">
-                <div class="card mb-4 topic-card-size" style=@($"background-color: {topic.CssColor}")>
-                    <div class="card-body">
-                        <img src=@topic.ImageBase64 class="topic-img mx-auto d-block" alt="Topic image">
-                    </div>
-                    <div class="card-footer">
-                        <h5 class="card-title text-center">@topic.Title</h5>
+                <div class="card mb-4 text-center topic-card-size ratio ratio-1x1" style=@($"background-color: {topic.CssColor}")>
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <h1 class="card-title text-wrap card-title-adj">@topic.Title</h1>
                     </div>
                 </div>
             </div>
@@ -39,17 +36,11 @@
 </div>
 
 <style>
-    .topic-card-size {
-        min-height: 10rem;
-    }
-
-    .topic-img {
-        width: 200px;
-        height: 150px;
-        object-fit: fill;
+    .card-title-adj {
+        max-width: 100%;
+        word-wrap: break-word;
     }
 </style>
-
 
 @code {
     List<TopicDisplayData> _topicsToDisplay;
