--- a/psk_fitness/psk_fitness/Components/_Imports.razor
+++ b/psk_fitness/psk_fitness/Components/_Imports.razor
@@ -10,4 +10,5 @@
 @using psk_fitness
 @using psk_fitness.Client
 @using psk_fitness.Components
-@using psk_fitness.Entities
+@using psk_fitness.DTOs
+@using psk_fitness.Models
