--- a/psk_fitness/psk_fitness/Components/_Imports.razor
+++ b/psk_fitness/psk_fitness/Components/_Imports.razor
@@ -12,3 +12,6 @@
 @using psk_fitness.Components
 @using psk_fitness.DTOs
 @using psk_fitness.Models
+@using psk_fitness.Interfaces
+@using psk_fitness.Properties
+@using psk_fitness.Utilities
