--- a/psk_fitness/psk_fitness/Components/Exercises/Pages/Exercises.razor
+++ b/psk_fitness/psk_fitness/Components/Exercises/Pages/Exercises.razor
@@ -1,4 +1,6 @@
-﻿@page "/exercises"
+﻿@using psk_fitness.Data.Entities
+
+@page "/exercises"
 
 <div class="d-flex align-items-center">
     <h3 class="me-3">Exercises:</h3> 
