--- a/psk_fitness/psk_fitness/Components/Exercises/Pages/CreateExercise.razor
+++ b/psk_fitness/psk_fitness/Components/Exercises/Pages/CreateExercise.razor
@@ -1,4 +1,5 @@
-﻿<!-- Button trigger modal -->
+﻿@using psk_fitness.Data
+<!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newExerciseModal">
     New Exercise
 </button>
